--- a/package.json
+++ b/package.json
@@ -20,5 +20,19 @@
   "bugs": {
     "url": "https://github.com/Golden-Future/gf-videosteam-pwa/issues"
   },
-  "homepage": "https://github.com/Golden-Future/gf-videosteam-pwa#readme"
+  "homepage": "https://github.com/Golden-Future/gf-videosteam-pwa#readme",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^5.13.22",
+    "mongoose-paginate": "^5.0.3",
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "simple-mongoose-autoincrement": "^1.2.1"
+  }
 }
