--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
@@ -33,6 +34,7 @@
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "simple-mongoose-autoincrement": "^1.2.1"
+    "simple-mongoose-autoincrement": "^1.2.1",
+    "unique-username-generator": "^1.3.0"
   }
 }
